// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormContent renders properly 1`] = `
<ScrollViewMock>
  <C
    component={[Function]}
    label="Title"
    name="title"
  />
  <Headline>
    Cards
  </Headline>
  <Fadable
    fade={false}
    key="1"
    onAnimationEnd={[Function]}
  >
    <Flashcard
      onFlashcardDeleted={[Function]}
    >
      <C
        component={[Function]}
        label="Question"
        mode="outlined"
        multiline={true}
        name="questions.0.question"
      />
      <C
        component={[Function]}
        label="Answer"
        mode="outlined"
        multiline={true}
        name="questions.0.answer"
      />
    </Flashcard>
  </Fadable>
</ScrollViewMock>
`;

exports[`FormContent renders properly when values are dirty 1`] = `
<ScrollViewMock>
  <C
    component={[Function]}
    label="Title"
    name="title"
  />
  <Headline>
    Cards
  </Headline>
  <Fadable
    fade={false}
    key="1"
    onAnimationEnd={[Function]}
  >
    <Flashcard
      onFlashcardDeleted={[Function]}
    >
      <C
        autoFocus={true}
        component={[Function]}
        label="Question"
        mode="outlined"
        multiline={true}
        name="questions.0.question"
      />
      <C
        component={[Function]}
        label="Answer"
        mode="outlined"
        multiline={true}
        name="questions.0.answer"
      />
    </Flashcard>
  </Fadable>
</ScrollViewMock>
`;
